# image_processor

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/impl/: args_handler.cpp  bmp_reader.cpp  bmp_writer.cpp  crop.cpp  crystallize.cpp  edge_detection.cpp  filter.cpp  filters.cpp  gauss_blur.cpp  grayscale.cpp  image.cpp  negative.cpp  sharpening.cpp
lib/include/: args_handler.h  bmp_reader.h  bmp_writer.h  crop.h  crystallize.h  edge_detection.h  filter.h  filters.h  gauss_blur.h  grayscale.h  image.h  negative.h  sharpening.h
tests/: CMakeLists.txt  test_args_handler.cpp  test_filters.cpp  test_image_io.cpp
